[package]
name = "capstone-java"
version = "0.0.1"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
jni = "0.21.1"
paste = "1.0.14"
capstone = "0.11.0"

[profile.release]
lto = true
strip = true
opt-level = 3

[profile.mac-release]
inherits = "release"
lto = true
strip = false
opt-level = 3